--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "قم بالاتصال بشبكة \"HIS-xxxx\" في إعدادات Wi-Fi الخاصة بهاتفك الذكي. \n\n اخرج من تطبيق ConnectLife، وانتقل إلى إعدادات WiFi في هاتفك الذكي. اتصل بشبكة \"HIS-xxxx\" ثم عد إلى تطبيق ConnectLife.",
     "CL_DV_RF_view_detail": "عرض التفاصيل",
     "CL_DV_RF_structural_diagram": "مخطط هيكلي",
-    "CL_DV_OV_more_options": "المزيد من الخيارات"
+    "CL_DV_OV_more_options": "المزيد من الخيارات",
+    "CL_DV_OV_no_preheat": "لا يوجد تسخين مسبق",
+    "CL_DV_OV_fast_preheat_desc": "التسخين المسبق السريع هو أسرع طريقة لتسخين الفرن مسبقًا. يستغرق الأمر حوالي 7 دقائق.",
+    "CL_DV_OV_preheat_desc": "التسخين المسبق هو أفضل طريقة لتسخين الفرن مسبقًا مع مراعاة نوع الطبق. يستغرق الأمر حوالي 10 دقائق.",
+    "CL_DV_OV_no_preheat_desc": "ليس من الضروري دائمًا تسخين الفرن مسبقًا. على سبيل المثال لإعادة تسخين بعض الأطعمة."
 }
