--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "अपने स्मार्टफोन की वाई-फाई सेटिंग में \"HIS-xxxx\" नेटवर्क से कनेक्ट करें। \n\n कनेक्टलाइफ ऐप से बाहर निकलें, अपने स्मार्टफोन की वाई-फाई सेटिंग में जाएं। \"HIS-xxxx\" नेटवर्क से कनेक्ट करें और वापस कनेक्टलाइफ ऐप पर लौटें।",
     "CL_DV_RF_view_detail": "विवरण देखें",
     "CL_DV_RF_structural_diagram": "संरचनात्मक आरेख",
-    "CL_DV_OV_more_options": "अधिक विकल्प"
+    "CL_DV_OV_more_options": "अधिक विकल्प",
+    "CL_DV_OV_no_preheat": "कोई प्रीहीट नहीं",
+    "CL_DV_OV_fast_preheat_desc": "फास्ट प्रीहीट आपके ओवन को प्रीहीट करने का सबसे तेज़ तरीका है। इसमें लगभग 7 मिनट लगते हैं।",
+    "CL_DV_OV_preheat_desc": "प्रीहीट आपके ओवन को डिश के हिसाब से गर्म करने का सबसे अच्छा तरीका है। इसमें लगभग 10 मिनट लगते हैं।",
+    "CL_DV_OV_no_preheat_desc": "हमेशा अपने ओवन को पहले से गरम करना ज़रूरी नहीं है। उदाहरण के लिए, कुछ खाद्य पदार्थों को दोबारा गर्म करने के लिए।"
 }
