--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "Смартфоныңыздың Wi-Fi параметрлерінде «HIS-xxxx» желісіне қосылыңыз. \n\n ConnectLife қолданбасынан шығыңыз, смартфонның WiFi параметрлеріне өтіңіз. \"HIS-xxxx\" желісіне қосылып, ConnectLife қолданбасына оралыңыз.",
     "CL_DV_RF_view_detail": "Мәліметтерді көру",
     "CL_DV_RF_structural_diagram": "Құрылымдық диаграмма",
-    "CL_DV_OV_more_options": "Қосымша опциялар"
+    "CL_DV_OV_more_options": "Қосымша опциялар",
+    "CL_DV_OV_no_preheat": "Алдын ала қыздыру жоқ",
+    "CL_DV_OV_fast_preheat_desc": "Жылдам алдын ала қыздыру — пешті алдын ала қыздырудың ең жылдам жолы. Бұл шамамен 7 минутты алады.",
+    "CL_DV_OV_preheat_desc": "Алдын ала қыздыру - тағамды ескере отырып, пешті алдын ала қыздырудың ең жақсы жолы. Бұл шамамен 10 минутты алады.",
+    "CL_DV_OV_no_preheat_desc": "Пешті алдын ала қыздыру әрқашан қажет емес. Мысалы, кейбір тағамдарды қыздыру үшін."
 }
