--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "Поврзете се на мрежата „HIS-xxxx“ во поставките за Wi-Fi на вашиот паметен телефон. \n\n Излезете од апликацијата ConnectLife, одете до поставките за WiFi на паметниот телефон. Поврзете се на мрежата „HIS-xxxx“ и вратете се на апликацијата ConnectLife.",
     "CL_DV_RF_view_detail": "Погледнете ги деталите",
     "CL_DV_RF_structural_diagram": "Структурен дијаграм",
-    "CL_DV_OV_more_options": "Повеќе опции"
+    "CL_DV_OV_more_options": "Повеќе опции",
+    "CL_DV_OV_no_preheat": "Без претходно загревање",
+    "CL_DV_OV_fast_preheat_desc": "Брзото загревање е најбрзиот начин да ја загреете рерната. Потребни се приближно 7 минути.",
+    "CL_DV_OV_preheat_desc": "Загревањето е најдобриот начин да ја загреете рерната со оглед на садот. Потребни се приближно 10 минути.",
+    "CL_DV_OV_no_preheat_desc": "Не е секогаш потребно претходно да се загрее рерната. На пример за подгревање на одредена храна."
 }
