--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "Подключитесь к сети «HIS-xxxx» в настройках Wi-Fi вашего смартфона. \n\n Выйдите из приложения ConnectLife, перейдите в настройки WiFi вашего смартфона. Подключитесь к сети \"HIS-xxxx\" и вернитесь обратно в приложение ConnectLife.",
     "CL_DV_RF_view_detail": "Посмотреть подробности",
     "CL_DV_RF_structural_diagram": "Структурная схема",
-    "CL_DV_OV_more_options": "Больше вариантов"
+    "CL_DV_OV_more_options": "Больше вариантов",
+    "CL_DV_OV_no_preheat": "Без предварительного нагрева",
+    "CL_DV_OV_fast_preheat_desc": "Fast Preheat — самый быстрый способ разогреть духовку. Это займет около 7 минут.",
+    "CL_DV_OV_preheat_desc": "Предварительный нагрев — лучший способ разогреть духовку, учитывая блюдо. Это займет около 10 минут.",
+    "CL_DV_OV_no_preheat_desc": "Не всегда нужно предварительно разогревать духовку. Например, для разогрева определенных блюд."
 }
