--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "Підключіться до мережі «HIS-xxxx» в налаштуваннях Wi-Fi вашого смартфона. \n\n Вийдіть із програми ConnectLife, перейдіть до налаштувань WiFi вашого смартфона. Підключіться до мережі «HIS-xxxx» і поверніться до програми ConnectLife.",
     "CL_DV_RF_view_detail": "Переглянути деталі",
     "CL_DV_RF_structural_diagram": "Структурна схема",
-    "CL_DV_OV_more_options": "Більше варіантів"
+    "CL_DV_OV_more_options": "Більше варіантів",
+    "CL_DV_OV_no_preheat": "Без попереднього розігріву",
+    "CL_DV_OV_fast_preheat_desc": "Швидке розігрівання — це найшвидший спосіб попередньо розігріти духовку. Це займає приблизно 7 хвилин.",
+    "CL_DV_OV_preheat_desc": "Попередній нагрів — найкращий спосіб розігріти духовку з огляду на страву. Це займає приблизно 10 хвилин.",
+    "CL_DV_OV_no_preheat_desc": "Не завжди потрібно розігрівати духовку. Наприклад, для розігрівання деяких страв."
 }
