--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "Csatlakozzon a \"HIS-xxxx\" hálózathoz az okostelefon Wi-Fi beállításaiban. \n\n Lépjen ki a ConnectLife alkalmazásból, lépjen az okostelefon WiFi beállításaihoz. Csatlakozzon a \"HIS-xxxx\" hálózathoz, és térjen vissza a ConnectLife alkalmazáshoz.",
     "CL_DV_RF_view_detail": "Részletek megtekintése",
     "CL_DV_RF_structural_diagram": "Szerkezeti diagram",
-    "CL_DV_OV_more_options": "További lehetőségek"
+    "CL_DV_OV_more_options": "További lehetőségek",
+    "CL_DV_OV_no_preheat": "Nincs előmelegítés",
+    "CL_DV_OV_fast_preheat_desc": "A gyors előmelegítés a sütő előmelegítésének leggyorsabb módja. Körülbelül 7 percet vesz igénybe.",
+    "CL_DV_OV_preheat_desc": "Az előmelegítés a legjobb módja a sütő előmelegítésének, figyelembe véve az ételt. Körülbelül 10 percet vesz igénybe.",
+    "CL_DV_OV_no_preheat_desc": "Nem mindig szükséges előmelegíteni a sütőt. Például bizonyos ételek melegítésére."
 }
