--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "스마트폰의 Wi-Fi 설정에서 \"HIS-xxxx\" 네트워크에 연결하세요. \n\n ConnectLife 앱을 종료하고 스마트폰의 WiFi 설정으로 이동합니다. \"HIS-xxxx\" 네트워크에 연결하고 ConnectLife 앱으로 돌아갑니다.",
     "CL_DV_RF_view_detail": "자세한 내용 보기",
     "CL_DV_RF_structural_diagram": "구조도",
-    "CL_DV_OV_more_options": "더 많은 옵션"
+    "CL_DV_OV_more_options": "더 많은 옵션",
+    "CL_DV_OV_no_preheat": "예열 없음",
+    "CL_DV_OV_fast_preheat_desc": "빠른 예열은 오븐을 예열하는 가장 빠른 방법입니다. 약 7분이 걸립니다.",
+    "CL_DV_OV_preheat_desc": "예열은 요리를 고려하면 오븐을 예열하는 가장 좋은 방법입니다. 약 10분이 걸립니다.",
+    "CL_DV_OV_no_preheat_desc": "오븐을 항상 예열할 필요는 없습니다. 예를 들어, 특정 음식을 다시 데울 때."
 }
