--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4049,5 +4049,9 @@
     "CL_CF_CS_soft_last_step": "Sambung ke rangkaian \"HIS-xxxx\" dalam tetapan Wi-Fi telefon pintar anda. \n\n Keluar dari aplikasi ConnectLife, pergi ke tetapan WiFi telefon pintar anda. Sambung ke rangkaian \"HIS-xxxx\" dan kembali ke apl ConnectLife.",
     "CL_DV_RF_view_detail": "Lihat Butiran",
     "CL_DV_RF_structural_diagram": "Rajah Struktur",
-    "CL_DV_OV_more_options": "Lebih banyak pilihan"
+    "CL_DV_OV_more_options": "Lebih banyak pilihan",
+    "CL_DV_OV_no_preheat": "Tiada pemanasan awal",
+    "CL_DV_OV_fast_preheat_desc": "Prapanas Cepat ialah cara terpantas untuk memanaskan ketuhar anda. Ia mengambil masa lebih kurang 7 minit.",
+    "CL_DV_OV_preheat_desc": "Panaskan adalah cara terbaik untuk memanaskan ketuhar anda dengan mengambil kira hidangan. Ia mengambil masa kira-kira 10 minit.",
+    "CL_DV_OV_no_preheat_desc": "Ia tidak selalu diperlukan untuk memanaskan ketuhar anda. Contohnya untuk memanaskan semula makanan tertentu."
 }
